--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
     "helmet": "^8.1.0",
+    "imagekit": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "node-appwrite": "^17.2.0",
     "uuid": "^11.1.0",
     "zod": "^4.0.17"
