made few changes in index.js

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "node-appwrite": "^17.2.0",
+    "serverless-http": "^4.0.0",
     "uuid": "^11.1.0",
     "zod": "^4.0.17"
   },
