--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,16 @@
+
+
+
 {
   "version": 2,
   "builds": [
     {
       "src": "src/index.js",
       "use": "@vercel/node",
-      "config": {
-        "includeFiles": [
-          "src/**"
-        ]
-      }
+      "config": { "includeFiles": ["src/**"] }
     }
   ],
   "routes": [
-    {
-      "src": "/.*",
-      "dest": "src/index.js"
-    }
+    { "src": "/.*", "dest": "src/index.js" }
   ]
 }
