made few changes to controllers

--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.6",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
@@ -23,7 +25,10 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "node-appwrite": "^17.2.0",
+    "nodemailer": "^7.0.6",
+    "otp-generator": "^4.0.1",
     "serverless-http": "^4.0.0",
+    "sib-api-v3-sdk": "^8.5.0",
     "uuid": "^11.1.0",
     "zod": "^4.0.17"
   },
